Fixed slideshow bug where text knocks image out of place

--- a/styles/index.css
+++ b/styles/index.css
@@ -54,7 +54,7 @@ html {
 
 @media (min-width: 768px) {
   .title {
-    @apply text-5xl;
+    @apply text-4xl;
   }
 }
 
